syntax = "proto3";
package payment;

service BTC {
  rpc PayBTC (PayBTCRequest) returns (PayBTCResponse);
}

message PayBTCRequest {
  string donor        = 1;
  string beneficiary  = 2;
  uint32 amount       = 3;
}

message PayBTCResponse {
  bool   successful = 1;
  string message    = 2;
}